syntax = "proto3";
package kube.gateway.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway2/pkg/api/gateway.gloo.solo.io/v1alpha1/kube";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

// Configuration for a Kubernetes Service.
message Service {
  // The Kubernetes Service type.
  ServiceType type = 1;

  // The manually specified IP address of the service, if a randomly assigned
  // IP is not desired. See
  // https://kubernetes.io/docs/concepts/services-networking/service/#choosing-your-own-ip-address
  // and
  // https://kubernetes.io/docs/concepts/services-networking/service/#headless-services
  // on the implications of setting `clusterIP`.
  string clusterIP = 2;

  // Additional labels to add to the Service object metadata.
  map<string, string> extra_labels = 3;

  // Additional annotations to add to the Service object metadata.
  map<string, string> extra_annotations = 4;

  // Kubernetes Service type. If not specified, defaults to `ClusterIP`.
  // See
  // https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
  // for details on each service type.
  // Currently, only ClusterIP and LoadBalancer are supported.
  enum ServiceType {
    // Exposes the Service on a cluster-internal IP. This is the default.
    ClusterIP = 0;

    // Exposes the Service externally using an external load balancer.
    LoadBalancer = 1;

    // Exposes the Service on each Node's IP at a static port.
    // Not currently supported, see
    // https://github.com/kubernetes-sigs/gateway-api/issues/2321
    // NodePort = 2;
  }
}
